data/all_generated_tests/raw_wast_tests/call_MismanagementofBlockNesting_3450.wast
;; 9. **Test 9**:    - **Description**: A `call` instruction inside a loop that also contains block instructions with varying types being pushed and popped from the stack.    - **Constraint Checked**: Validates stack type consistency and correctness during multiple stack push and pop operations within nested loops and blocks.    - **Relation to Block Nesting**: Ensures correct stack operation sequence and type checking across nested loops and blocks.

(assert_invalid
  (module
    (func $test-loop-block-stack
      (loop (block (i32.const 0) (call 1)) (i32.const 1) drop)
    )
    (func (param i32) (result i32) (i32.const 42))
  )
  "type mismatch"
)